55959: [T][I1][Extra] - Issues after testing on iPhone SE under Safari browser

--- a/app/design/frontend/Fecon/theme/web/css/source/_product_page.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/_product_page.less
@@ -383,3 +383,32 @@ body.catalog-product-view {
         }
     }
 }
+@supports (-webkit-overflow-scrolling: touch) {
+    body.catalog-product-view {
+        .page-wrapper {
+            main#maincontent {
+                .columns {
+                    .column.main {
+                        .product-info-main {
+                            .product-add-form {
+                                form {
+                                    .box-tocart {
+                                        .fieldset {
+                                            .field.qty {
+                                                .control {
+                                                    span.icon-down-chevron {
+                                                        padding: 14px 15px 14px 27px;
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
