--- a/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
@@ -397,19 +397,36 @@
                     .columns {
                         .column.main {
                             .product-info-main {
-                                .product-add-form {
-                                    form {
-                                        .box-tocart {
-                                            .fieldset {
-                                                .field.qty {
-                                                    .control {
-                                                        span.icon-down-chevron {
-                                                            padding: 15px 15px 15px 27px;
-                                                        }
-                                                    }
+                                .page-title-wrapper {
+                                .page-title {
+                                    span {
+                                            font-size: 30px !important;
+                                        }
+                                    }
+                                }
+                                .product-info-price {
+                                    .product-info-stock-sku {
+                                        left: -14px;
+                                    }
+                                    .price-box {
+                                        span.price-container {
+                                            .price-wrapper {
+                                                span.price {
+                                                    font-family: @font-family-name__verb;
+                                                    font-size: 30px;
+                                                    font-weight: 600;
+                                                    color: @color-black;
                                                 }
                                             }
                                         }
+                                    }
+                                }
+                                .product-reviews-summary {
+                                    .reviews-actions {
+                                        margin-left: -7px;
+                                    }
+                                    .rating-summary {
+                                        margin-bottom: 15px;
                                     }
                                 }
                             }
